# fitboddy_tgbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tech_task.md
loki/: loki-config.yml
pgadmin/: pgpassfile  servers.json
prometheus/: prometheus.yml
src/: main.py
src/application/builders/: specification_builder.py
src/application/factories/: answer_builder_factory.py
src/application/interfaces/: file_storage.py  payment_gateway.py  repositories.py
src/application/services/: admin_users.py  contraindication_admin.py  custom_question_admin.py  equipment_admin.py  exercise_admin.py  metrics.py  muscle_admin.py  notification.py  profile_completion.py  questionnaire.py  questionnaire_answers.py  questionnaire_flow_queries.py  scheduled_workout_lines.py  smart_exercise_matcher.py  smart_workout_matcher.py  subscription.py  training_plan_admin.py  training_plan_generator.py  user_plan_service.py  user_registration.py  value_casting.py  workout_analytics_admin.py  workout_matcher.py  workout_scheduler.py  workout_template_admin.py
src/application/specifications/: __init__.py  workout_template_specs.py
src/application/strategies/: __init__.py  scoring_strategy.py
src/application/workout/: __init__.py
src/commons/: __init__.py  exceptions.py  passwords.py
src/commons/validators/: __init__.py  base.py  bool_validator.py  choice_validator.py  contexts.py  list_parser.py  (+3 more)
src/domain/: exceptions.py
tempo/: tempo.yml
tests/: conftest.py
tests/unit/: test_kcju.py  test_simple_matcher.py
(+235 files in other folders)
