[project]
name = "fitboddy"
version = "0.1.0"
description = "Fitboddy Telegram Fitness Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.14",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "dependency-injector>=4.0",
    "structlog>=24.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "anyio>=4.0",
    "minio>=7.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "watchfiles>=1.1.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "aiosqlite>=0.20",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

